block 'dropdown' css fix: increase z-index, move block highter than 'input__label'

--- a/common.blocks/dropdown/__content/dropdown__content.css
+++ b/common.blocks/dropdown/__content/dropdown__content.css
@@ -1,7 +1,7 @@
 .dropdown__content-wrapper
 {
     position: absolute;
-    z-index: 1;
+    z-index: 10;
     -webkit-transition: all 0.3s ease-out;
     -moz-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
